apps/base/outline/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: outline
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
